feat: discoin claims
Signed-off-by: Chris Gianelloni <wolf31o2@blinklabs.io>

--- a/client/src/styles.scss
+++ b/client/src/styles.scss
@@ -24,26 +24,26 @@ body,
 
 .app {
   background: var(--body-background);
+  background-size: cover;
   overflow-x: hidden;
+  overflow-y: scroll;
 }
 
 strong {
   color: inherit;
 }
 
-.tosi-button {
-  background: var(--gradient-button-default);
-  background: var(--gradient-button);
+.claim-button {
+  background: var(--button-default);
   color: var(--font-highlight);
   cursor: pointer;
 
   &:hover {
-    background: var(--gradient-button-hover-default);
-    background: var(--gradient-button-hover);
+    background: var(--button-hover-default);
   }
 
   &:disabled {
-    background: var(--gradient-button-disabled) !important;
+    background: var(--button-disabled) !important;
     cursor: initial;
     opacity: 0.8;
   }
